--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
 project(lispy C)
 set(CMAKE_C_STANDARD 11)
-add_executable(lispy prompt.c)
-target_link_libraries(lispy edit)
+add_executable(lispy prompt.c mpc.h mpc.c)
+target_link_libraries(lispy edit m)
